add interaction description

--- a/index.html
+++ b/index.html
@@ -184,9 +184,8 @@
         <div class='gLegend'></div>
         <div style="display: flex">
           <button class="reset">Reset</button>
-          <div class='color-legend'>
-            <button class='color-toggle'>Show age of sites</div>
-          </div>
+          <p style="font-size: 0.7em; padding-top: 3.5px;">Brush on timeline chart to filter samples collected. Click on a species line to view it's collection sites. Click on a marker on map to view all collected species at that site.</p>
+        </div>
       </div>
       <div id='chart-main'></div>
       <div id='chart-sub'></div>
